# Quark

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp
Engine/: CMakeLists.txt  Mesh.cpp  Mesh.h  MeshBuilder.cpp  MeshBuilder.h  Object.cpp  Object.h  Renderable.cpp  Renderable.h  World.cpp  World.h
graphics/: CMakeLists.txt  Graphics.cpp  Graphics.hpp
libs/gl3w/: CMakeLists.txt  gl3w_gen.py
libs/gl3w/cmake/: gl3w-config.cmake
libs/glad/include/glad/: glad.h
libs/glad/src/: glad.c
src/: audio.cpp  audio.h  main.cpp
src/node/: AudioQuark.cpp  AudioQuark.h  CameraQuark.cpp  CameraQuark.h  CountingQuark.cpp  CountingQuark.h  CubeQuark.cpp  CubeQuark.h  Node.cpp  Node.h  Quark.h  World.cpp  World.h
src/windowing/: Window.cpp  Window.h
